Copy the retained elements once